--- a/sinaisesintomas.html
+++ b/sinaisesintomas.html
@@ -83,8 +83,8 @@
                         <div class="arruma2">
                             <select name="op2" id="op2">
                                 <option value="-----">-----</option>
-                                <option value="Lábios">Lábios</option>
-                                <option value="Extremidade">Extremidade</option>
+                                <option value="Generalizado">Lábios</option>
+                                <option value="Localizado">Extremidade</option>
                             </select>
                         </div>
                     </label><br>
