--- a/principal.html
+++ b/principal.html
@@ -69,6 +69,7 @@
         <div class="abacima" onclick="abrir3();" id="aba3"><h3>Problemas</h3><i class="fa-solid fa-chevron-right" id="seta3"></i></div>
         <div class="abacima" onclick="abrir4();" id="aba4"><h3>Procedimentos</h3><i class="fa-solid fa-chevron-right" id="seta4"></i></div>
         <div class="abacima" onclick="abrir5();" id="aba5"><h3>Condução</h3><i class="fa-solid fa-chevron-right" id="seta5"></i></div>
+        <div class="abacima" onclick="abrir6();" id="aba6"><h3>Sinais e Sintomas 1</h3><i class="fa-solid fa-chevron-right" id="seta6"></i></div>
     </div>
     
     <div class="iframes">
@@ -77,6 +78,7 @@
         <iframe src="vitimaera.html" id="iframe2" width="100%" height="100%"></iframe>
         <iframe src="procedimentos.html" id="iframe4" width="100%" height="100%"></iframe>
         <iframe src="conducao.html" id="iframe5" width="100%" height="100%"></iframe>
+        <iframe src="sinaisesintomas.html" id="iframe6" width="100%" height="100%"></iframe>
     </div>
 </div>
 
@@ -95,6 +97,8 @@
     var aba4 = document.getElementById('aba4');
     var iframe5 = document.getElementById('iframe5');
     var aba5 = document.getElementById('aba5');
+    var iframe6 = document.getElementById('iframe6');
+    var aba6 = document.getElementById('aba6');
 
     function dados(){
         document.getElementById('dado').style.display = 'block'
@@ -109,12 +113,14 @@
        aba2.classList.remove('active');
        aba3.classList.remove('active');
        aba5.classList.remove('active');
+       aba6.classList.remove('active');
        aba4.classList.remove('active');
        iframe1.style.display = 'block';
        iframe2.style.display = 'none';
        iframe3.style.display = 'none';
        iframe4.style.display = 'none';
        iframe5.style.display = 'none';
+       iframe6.style.display = 'none';
     }
 
     function abrir2(){
@@ -123,11 +129,13 @@
        aba3.classList.remove('active');
        aba5.classList.remove('active');
        aba4.classList.remove('active');
+       aba6.classList.remove('active');
        iframe2.style.display = 'block';
        iframe1.style.display = 'none';
        iframe3.style.display = 'none';
        iframe5.style.display = 'none';
        iframe4.style.display = 'none';
+       iframe6.style.display = 'none';
     }
 
     function abrir3(){
@@ -136,11 +144,13 @@
        aba2.classList.remove('active');
        aba5.classList.remove('active');
        aba4.classList.remove('active');
+       aba6.classList.remove('active');
        iframe3.style.display = 'block';
        iframe1.style.display = 'none';
        iframe2.style.display = 'none';
        iframe5.style.display = 'none';
        iframe4.style.display = 'none';
+       iframe6.style.display = 'none';
     }
 
     function abrir4(){
@@ -149,11 +159,13 @@
        aba2.classList.remove('active');
        aba3.classList.remove('active');
        aba5.classList.remove('active');
+       aba6.classList.remove('active');
        iframe4.style.display = 'block';
        iframe1.style.display = 'none';
        iframe2.style.display = 'none';
        iframe3.style.display = 'none';
        iframe5.style.display = 'none';
+       iframe6.style.display = 'none';
     }
 
     function abrir5(){
@@ -162,7 +174,24 @@
        aba2.classList.remove('active');
        aba3.classList.remove('active');
        aba4.classList.remove('active');
+       aba6.classList.remove('active');
        iframe5.style.display = 'block';
+       iframe1.style.display = 'none';
+       iframe2.style.display = 'none';
+       iframe3.style.display = 'none';
+       iframe4.style.display = 'none';
+       iframe6.style.display = 'none';
+    }
+
+    function abrir6(){
+       aba6.classList.add('active');
+       aba5.classList.remove('active');
+       aba1.classList.remove('active');
+       aba2.classList.remove('active');
+       aba3.classList.remove('active');
+       aba4.classList.remove('active');
+       iframe6.style.display = 'block';
+       iframe5.style.display = 'none';
        iframe1.style.display = 'none';
        iframe2.style.display = 'none';
        iframe3.style.display = 'none';
