--- a/procedimentos.html
+++ b/procedimentos.html
@@ -19,30 +19,40 @@
                     <label for="opcao1" class="agrupamento">
                         <input type="checkbox" id="opcao1" name="opcao1" value="Opção 1">
                         <span class="checkmark"></span>
-                        <div class="texto1">Deitada</div>
+                        <div class="texto1">Aspiração</div>
                     </label><br>
 
                     <label for="opcao2" class="agrupamento">
                         <input type="checkbox" id="opcao2" name="opcao2" value="Opção 2">
                         <span class="checkmark"></span>
-                        <div class="texto1">Cala Boca</div>
+                        <div class="texto1">Avaliação Inicial</div>
+                    </label><br>
+
+                    <label for="opcao3" class="agrupamento">
+                        <input type="checkbox" id="opcao3" name="opcao3" value="Opção 1">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Avaliação Dirigida</div>
+                    </label><br>
+
+                    <label for="opcao4" class="agrupamento">
+                        <input type="checkbox" id="opcao4" name="opcao4" value="Opção 4">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Avaliação Continuada</div>
+                    </label><br>
+
+                    <label for="opcao5" class="agrupamento">
+                        <input type="checkbox" id="opcao5" name="opcao5" value="Opção 5">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Aspiração</div>
                     </label><br>
                 </div>
 
                 <div class="d2">
-                    <label for="opcao2" class="agrupamento">
-                        <input type="checkbox" id="opcao2" name="opcao2" value="Opção 2">
-                        <span class="checkmark"></span>
-                        <div class="texto1">Semi-Sentada</div>
-                    </label><br>
+
                 </div>
 
                 <div class="d3">
-                    <label for="opcao3" class="agrupamento">
-                        <input type="checkbox" id="opcao3" name="opcao3" value="Opção 3">
-                        <span class="checkmark"></span>
-                        <div class="texto1">Sentada</div>
-                    </label><br>
+
                 </div>
             </div>
             <br>
