--- a/procedimentos.html
+++ b/procedimentos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atendimento de Ocorrências</title>
     <link rel="icon" type="image/png" href="image/logo_noar.png">
-    <link rel="stylesheet" href="css/janelas.css">
+    <link rel="stylesheet" href="css/procedimentos.css">
 </head>
 
 <body>
@@ -43,15 +43,53 @@
                     <label for="opcao5" class="agrupamento">
                         <input type="checkbox" id="opcao5" name="opcao5" value="Opção 5">
                         <span class="checkmark"></span>
-                        <div class="texto1">Aspiração</div>
+                        <div class="texto1">Chave de Rautek</div>
                     </label><br>
+
+                    <label for="opcao6" class="agrupamento">
+                        <input type="checkbox" id="opcao6" name="opcao6" value="Opção 6">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Cânula de Guedel</div>
+                    </label>
                 </div>
 
                 <div class="d2">
+                    <label for="opcao7" class="agrupamento">
+                        <input type="checkbox" id="opcao7" name="opcao7" value="Opção 7">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Desobstrução de V.A</div>
+                    </label><br>
 
+                    <label for="opcao8" class="agrupamento">
+                        <input type="checkbox" id="opcao8" name="opcao8" value="Opção 8">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Emprego de D.E.A</div>
+                    </label><br>
+
+                    <label for="opcao9" class="agrupamento">
+                        <input type="checkbox" id="opcao9" name="opcao9" value="Opção 9">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Gerenciamento de Riscos</div>
+                    </label><br>
+
+                    <label for="opcao10" class="agrupamento">
+                        <input type="checkbox" id="opcao10" name="opcao10" value="Opção 10">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Limpeza de Ferimento</div>
+                    </label><br>
+
+                    <label for="opcao10" class="agrupamento">
+                        <input type="checkbox" id="opcao10" name="opcao10" value="Opção 10">
+                        <span class="checkmark"></span>
+                        <div class="texto1">Limpeza de Ferimento</div>
+                    </label><br>
                 </div>
 
                 <div class="d3">
+
+                </div>
+
+                <div class="d4">
 
                 </div>
             </div>
