--- a/principal.html
+++ b/principal.html
@@ -70,6 +70,7 @@
         <div class="abacima" onclick="abrir4();" id="aba4"><h3>Procedimentos</h3><i class="fa-solid fa-chevron-right" id="seta4"></i></div>
         <div class="abacima" onclick="abrir5();" id="aba5"><h3>Condução</h3><i class="fa-solid fa-chevron-right" id="seta5"></i></div>
         <div class="abacima" onclick="abrir6();" id="aba6"><h3>Sinais e Sintomas 1</h3><i class="fa-solid fa-chevron-right" id="seta6"></i></div>
+        <div class="abacima" onclick="abrir7();" id="aba7"><h3>Sinais e Sintomas 2</h3><i class="fa-solid fa-chevron-right" id="seta7"></i></div>
     </div>
     
     <div class="iframes">
@@ -79,6 +80,7 @@
         <iframe src="procedimentos.html" id="iframe4" width="100%" height="100%"></iframe>
         <iframe src="conducao.html" id="iframe5" width="100%" height="100%"></iframe>
         <iframe src="sinaisesintomas.html" id="iframe6" width="100%" height="100%"></iframe>
+        <iframe src="sinaisesintomas2.html" id="iframe7" width="100%" height="100%"></iframe>
     </div>
 </div>
 
@@ -99,6 +101,9 @@
     var aba5 = document.getElementById('aba5');
     var iframe6 = document.getElementById('iframe6');
     var aba6 = document.getElementById('aba6');
+    var iframe7 = document.getElementById('iframe7');
+    var aba7 = document.getElementById('aba7');
+
 
     function dados(){
         document.getElementById('dado').style.display = 'block'
@@ -114,6 +119,7 @@
        aba3.classList.remove('active');
        aba5.classList.remove('active');
        aba6.classList.remove('active');
+       aba7.classList.remove('active');
        aba4.classList.remove('active');
        iframe1.style.display = 'block';
        iframe2.style.display = 'none';
@@ -121,6 +127,7 @@
        iframe4.style.display = 'none';
        iframe5.style.display = 'none';
        iframe6.style.display = 'none';
+       iframe7.style.display = 'none';
     }
 
     function abrir2(){
@@ -130,12 +137,14 @@
        aba5.classList.remove('active');
        aba4.classList.remove('active');
        aba6.classList.remove('active');
+       aba7.classList.remove('active');
        iframe2.style.display = 'block';
        iframe1.style.display = 'none';
        iframe3.style.display = 'none';
        iframe5.style.display = 'none';
        iframe4.style.display = 'none';
        iframe6.style.display = 'none';
+       iframe7.style.display = 'none';
     }
 
     function abrir3(){
@@ -145,12 +154,14 @@
        aba5.classList.remove('active');
        aba4.classList.remove('active');
        aba6.classList.remove('active');
+       aba7.classList.remove('active');
        iframe3.style.display = 'block';
        iframe1.style.display = 'none';
        iframe2.style.display = 'none';
        iframe5.style.display = 'none';
        iframe4.style.display = 'none';
        iframe6.style.display = 'none';
+       iframe7.style.display = 'none';
     }
 
     function abrir4(){
@@ -160,12 +171,14 @@
        aba3.classList.remove('active');
        aba5.classList.remove('active');
        aba6.classList.remove('active');
+       aba7.classList.remove('active');
        iframe4.style.display = 'block';
        iframe1.style.display = 'none';
        iframe2.style.display = 'none';
        iframe3.style.display = 'none';
        iframe5.style.display = 'none';
        iframe6.style.display = 'none';
+       iframe7.style.display = 'none';
     }
 
     function abrir5(){
@@ -175,12 +188,14 @@
        aba3.classList.remove('active');
        aba4.classList.remove('active');
        aba6.classList.remove('active');
+       aba7.classList.remove('active');
        iframe5.style.display = 'block';
        iframe1.style.display = 'none';
        iframe2.style.display = 'none';
        iframe3.style.display = 'none';
        iframe4.style.display = 'none';
        iframe6.style.display = 'none';
+       iframe7.style.display = 'none';
     }
 
     function abrir6(){
@@ -190,12 +205,32 @@
        aba2.classList.remove('active');
        aba3.classList.remove('active');
        aba4.classList.remove('active');
+       aba7.classList.remove('active');
        iframe6.style.display = 'block';
        iframe5.style.display = 'none';
        iframe1.style.display = 'none';
        iframe2.style.display = 'none';
        iframe3.style.display = 'none';
        iframe4.style.display = 'none';
+       iframe7.style.display = 'none';
+    }
+
+    function abrir7(){
+       aba7.classList.add('active');
+       aba6.classList.remove('active');
+       aba5.classList.remove('active');
+       aba1.classList.remove('active');
+       aba2.classList.remove('active');
+       aba3.classList.remove('active');
+       aba4.classList.remove('active');
+       iframe7.style.display = 'block';
+       iframe6.style.display = 'none';
+       iframe5.style.display = 'none';
+       iframe1.style.display = 'none';
+       iframe2.style.display = 'none';
+       iframe3.style.display = 'none';
+       iframe4.style.display = 'none';
+
     }
 </script>
 </html>
