--- a/dados2.html
+++ b/dados2.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="image/logo_noar.png">
+    <link rel="stylesheet" href="css/dados2.css">
     <title>Dados Pessoais 2</title>
 </head>
 <body>
@@ -12,7 +14,13 @@
             <div class="forms">
                 <div class="usb">Nº USB: <input type="text" id="usb"></div>
 
-                <div class="ocorr">Nº Ocorr: <input type="text" name="" id="ocorr"></div>      
+                <div class="ocorr">Nº Ocorr: <input type="text" name="" id="ocorr"></div>  
+                
+                <div class="desp">DESP: <input type="text" name="" id="desp"></div>
+
+                <div class="hch">H. CH: <input type="text" name="" id="hch"></div>
+
+                <div class="kmfim">KM FINAL: <input type="text" name="" id="kmfim"></div>
 
             </div>
         </form>
